--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "source-map-url": "^0.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
