--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.49.9",
     "source-map-url": "^0.4.1",
     "styled-components": "^5.3.3",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
