--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "boxicons": "^2.1.1",
     "clsx": "^1.1.1",
     "react": "^17.0.2",
+    "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.6",
