--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-image-file-resizer": "^0.4.7",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
