--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1",
     "source-map-url": "^0.4.1",
     "styled-components": "^5.3.3",
     "util": "^0.12.4",
