--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "boxicons": "^2.1.1",
     "clsx": "^1.1.1",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^17.0.2",
@@ -34,7 +36,8 @@
     "start": "set PORT=3030 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json"
   },
   "eslintConfig": {
     "extends": [
