--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "boxicons": "^2.1.1",
     "clsx": "^1.1.1",
     "json-server": "^0.17.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^17.0.2",
@@ -24,6 +25,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "sass": "^1.49.9",
     "socket.io-client": "^4.5.0",
     "source-map-url": "^0.4.1",
