--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "photo-rect-v",
-  "version": "0.1.0",
+  "name": "photo_corner",
   "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -17,49 +22,25 @@
     "clsx": "^1.1.1",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
     "react-animated-heart": "^0.0.7-alpha.1",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
     "react-scroll-to-bottom": "^4.2.0",
     "sass": "^1.49.9",
     "socket.io-client": "^4.5.0",
     "source-map-url": "^0.4.1",
     "styled-components": "^5.3.3",
-    "util": "^0.12.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "start": "set PORT=3030 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "util": "^0.12.4"
   },
   "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.9",
     "autoprefixer": "^10.4.2",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.7",
