--- a/package.json
+++ b/package.json
@@ -8,22 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/material": "^5.4.4",
-    "@mui/styled-engine-sc": "^5.4.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
     "axios": "^0.27.2",
     "boxicons": "^2.1.1",
     "clsx": "^1.1.1",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
-    "react-animated-heart": "^0.0.7-alpha.1",
     "react": "^18.0.0",
+    "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
@@ -40,10 +35,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.9",
     "autoprefixer": "^10.4.2",
     "gh-pages": "^3.2.3",
     "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "vite": "^2.9.9"
   }
 }
