--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.0.0",
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-responsive": "^9.0.0-beta.6",
