see comments are working

--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "clsx": "^1.1.1",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
+    "react-moment": "^1.1.2",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
     "react-scroll-to-bottom": "^4.2.0",
