--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "source-map-url": "^0.4.1",
+    "framer-motion": "^6.3.16",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
