--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "boxicons": "^2.1.2",
     "clsx": "^1.2.1",
+    "framer-motion": "^6.3.16",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
@@ -23,12 +24,12 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
     "source-map-url": "^0.4.1",
-    "framer-motion": "^6.3.16",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
